--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </h4>
     
             <h4>
-            Dejanos tus comentarios
+            Dejanos tus comentarios aca
             </h4>
         
         <!--Inicio Formulario dentro de Sobre Nosotros-->
