--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!--Conexion CSS-->
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <!--Titulo tab-->
     <title>Blog Messi</title>
