--- a/Pages/Carrera.html
+++ b/Pages/Carrera.html
@@ -64,7 +64,7 @@
           Rey del Futbol
         </h3>
         <p>
-          Para arrancar, les dejo un emocionante video en el cual podremos observar un resumen de varias jugadas a lo largo de su vida para ir entrando en calor. No hay mucho que agregar. La musica de fondo emociona. 
+          Bienvenidos a este apasionante viaje a través de la asombrosa carrera de uno de los futbolistas más legendarios de todos los tiempos. Para arrancar, les dejo un emocionante video en el cual podremos observar un resumen de varias jugadas a lo largo de su vida para ir entrando en calor. La realidad es que el video podria durar horas o hasta quisa dias. De todas formas resume de manera correcta lo que buscamos expresar en la pagina. Cada minuto lo vale. Cada jugada es mejor que la otra. No hay mucho que agregar. La musica de fondo emociona. 
         </p>
       </div>
 
@@ -78,7 +78,7 @@
           Qatar 2022
         </h3>
         <p>
-          Que decir del mundial de Messi. Les dejo un breve resumen de sus partidos de manera ordenada. Cada vez se pone mejor.
+          Que decir del excelente mundial de Messi. Este video es un breve resumen de sus partidos de manera ordenada. A mi parecer el nivel del 10 tanto como del equipo fue de manera progresiva. Poco a poco y partido a partido el equipo comenzo a tomar confianza y el nivel de juego iba levantando vuelo. Todo quedo demostrado en el partido cumbre,  el seleccionado dirigido por Lionel Scaloni realizo una enmarcable final. 
         </p>
       </div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/tJKXPNgn20Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
